[package]
name = "ethnopia_bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.1", features = ["dynamic_linking"] }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
qol = { version = "0.1.17", git = "https://github.com/DrAlta/rust_quality_of_life.git"}
#ethnopians = {path= "../ethnopians/", features = ["sandbox"], default-features = false}
ethnopians = {git= "https://github.com/DrAlta/ethnopians.git", version = "0.2.3", branch = "bevy", features = ["sandbox"], default-features = false}


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[features]
default = ["debug", "error", "log"]
debug = []
error = []
log = []